--- a/README
+++ b/README
@@ -1,3 +1,6 @@
-= Capistrano Extensions
+# `capistrano-ext`
 
-Capistrano Extensions is a collection of tasks and methods that developers may use in their own Capistrano recipe files. Although some may find the tasks and such useful in their own right, the collection is intended primarily as an example of how to write and package Capistrano extension libraries.
+This repository is **obsolete**. 
+
+From the three extensions here, two are obsolete and remain here for historical purposes.
+The third, `capistrano/ext/multistage` was merged into the main line Capistrano release at SHA: eed1a6e.
